fixed truncation

--- a/NailSociety/src/components/blogs/blogcard/blogcard.css
+++ b/NailSociety/src/components/blogs/blogcard/blogcard.css
@@ -12,4 +12,12 @@
 
 .blogcard-link{
   text-decoration: none;
+  margin-left: 15px;
+}
+
+.text-multiline-truncate {
+  display: -webkit-box;
+  -webkit-line-clamp: 4; 
+  -webkit-box-orient: vertical;
+  overflow: hidden;
 }
